appId: net.tai2.voicepost
---
- tapOn: Continue
- tapOn:
    text: Decline
    optional: true
- tapOn: Email
- inputText: ${MAESTRO_DROPBOX_EMAIL}
- tapOn: return
- tapOn: Password
- inputText: ${MAESTRO_DROPBOX_PASSWORD}
- tapOn: return
- tapOn: Not Now
- tapOn: Continue
- tapOn: Allow
